# workspace-template

./: .envrc  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  subtrees.yaml
.githooks/: pre-commit  pre-push
scripts/: add_subtree.sh  common.sh  pull_all.sh  push_all.sh  setup.sh  status.sh  sync_precommit.py  sync_pyproject.py  test_all.sh
